# rusty_ai

./: Cargo.toml
src/: lib.rs  main.rs  prelude.rs
src/utils/: art.rs  cli.rs  executor.rs  mod.rs  parser.rs
