[package]
name = "crabby_ai"
version = "0.2.0"
edition = "2021"
authors = ["Arnab Phukan <iamarnab.phukan@gmail.com>"]
description = "A simple chatbot that is NOT AN LLM"
license = "Apache-2.0"
repository = "https://github.com/Solarcode-org/rusty_ai"

[lib]
name = "crabby_ai"
path = "src/lib.rs"

[[bin]]
name = "crabby"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
rpassword = "7.3.1"
rprompt = "2.1.1"
